# noem

./: .cspell.json  .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json  vitest.config.ts
.changeset/: all-colts-bake.md  better-ravens-strive.md  config.json  cozy-papers-judge.md  dry-run-keystore.md  dry-run-luhn.md  fresh-zoos-deny.md  great-badgers-smash.md  green-garlics-carry.md  kind-words-glow.md  legal-carrots-stare.md  mighty-jobs-switch.md  nice-dolls-beg.md  ninety-garlics-sink.md  republish-platform-keystore.md  six-dogs-report.md  tame-ads-lay.md  thin-seas-shave.md  vast-hotels-melt.md  wacky-signs-worry.md  wide-hounds-argue.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  openssf.yml  pr.yml  release.yml
apps/docs/: package.json
apps/docs/app/: page.tsx
packages-rust/platform-keystore/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  tsconfig.json  turbo.json
packages-rust/platform-keystore/npm/darwin-arm64/: package.json
packages-rust/platform-keystore/npm/darwin-x64/: package.json
packages-rust/platform-keystore/npm/win32-arm64-msvc/: README.md  package.json
packages-rust/platform-keystore/npm/win32-x64-msvc/: README.md  package.json
packages-rust/platform-keystore/src/: envelope.rs  lib.rs  provider.rs  types.rs
packages-rust/platform-keystore/src/macos/: enclave.rs  mod.rs
packages-rust/platform-keystore/src/windows/: ncrypt.rs
packages-rust/platform-keystore/test/: smoke.test.ts
scripts/: release-matrix.mts  sync-all-versions.mts  sync-cargo-lock.mts  sync-cargo-package.mts  sync-cargo-version.mjs  sync-licenses.mts  sync-napi-sub-packages.mts  sync-napi-subpackages.mts  tsconfig.json
