[package]
name = "noem-platform-keystore"
version = "0.0.10"
edition = "2024"
description = "Hardware-backed key storage for Node and Electron — provision non-exportable keys and seal/unseal secrets via TPM 2.0 (Windows NCrypt) or Apple Secure Enclave"
license = "MIT OR Apache-2.0"
keywords = ["tpm", "keystore", "ncrypt", "keychain", "secure-enclave"]
categories = ["cryptography", "os::windows-apis", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
napi-derive = "3"
serde_json = "1"
thiserror = "2"

[dependencies.napi]
version = "3"
features = ["napi9", "serde-json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.zeroize]
version = "1"
features = ["derive"]

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.62"
features = ["Win32_Security_Cryptography", "Win32_System_TpmBaseServices", "Win32_Foundation"]

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target."cfg(target_os = \"macos\")".dependencies.security-framework]
version = "3"
features = ["OSX_10_15"]

[target."cfg(target_os = \"macos\")".dependencies.security-framework-sys]
version = "2"
features = ["OSX_10_15"]

[build-dependencies]
napi-build = "2"
